# crosswordsgenerator

./: Cargo.toml  README.md  todo.txt
scripts/: download_words.py
src/: gui.rs  main.rs  utils.rs
