[package]
name = "crosswords_generator"
version = "0.3.0"
edition = "2021"
authors = ["Davide Modenese"]
description = "Implementation of a Crosswords Generator in Rust."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.5.7", features = ["derive", "cargo"] }

eframe = { version = "0.29", features = ["default", "__screenshot"] }
egui_extras = { version = "0.29", features = ["default", "image"] }
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
egui-modal = "0.5.0"
